@@ -18,6 +18,7 @@
 	jit : one more crash fix for the + operation and unexisting overloaded operator
 	nekoml : added Sys.is_directory, Sys.read_directory and Regexp.split
 	nekoml : don't allow empty match
+	vm : create pthreads in detached mode (prevent leak on osx/linux)
 
 2008-09-23 : 1.8.0
 	added mod_tora (neko application server)
